tests/invalid/bug191.err_exp
bug191.m:035: In clause for type class method implementation for `baz(in, in,
bug191.m:035:   out((bug191.a)))':
bug191.m:035:   mode error: argument 3 did not get sufficiently instantiated.
bug191.m:035:   Final instantiatedness of `HeadVar__3' was `ground',
bug191.m:035:   expected final instantiatedness was
bug191.m:035:     named inst a
bug191.m:035:     which expands to
bug191.m:035:       bound(
bug191.m:035:         a(ground)
bug191.m:035:       ).
